# zpenflow

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README.zh-CN.md
.github/workflows/: ci.yml  release.yml
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/dev/penflow/: HudView.kt  MainActivity.kt  MediaCodecCaps.kt  PenInputCapture.kt  PenflowClient.kt  Protocol.kt  TimeSync.kt  TouchInputCapture.kt  VideoDecoder.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: ic_launcher_background.xml
android/app/src/test/java/dev/penflow/: CodecSelectionTest.kt  ProtocolTest.kt  TimeSyncTest.kt
apps/penflow-gui/: .gitignore  package.json
apps/penflow-gui/src-tauri/: Cargo.toml  tauri.conf.json
apps/penflow-gui/src-tauri/capabilities/: default.json
apps/penflow-gui/src-tauri/icons/: icon.icns
apps/penflow-gui/src-tauri/src/: main.rs  os.rs  service.rs  settings.rs
apps/penflow-gui/src-tauri/wix/: vdd-install.wxs  vmulti-install.wxs
apps/penflow-gui/ui/: app.js  index.html  package-lock.json  package.json  style.css  vite.config.js
apps/penflow-gui/ui/src/: App.jsx  global.css  main.jsx
crates/penflow-core/: Cargo.toml
crates/penflow-core/examples/: adapter_topology.rs  capture_to_file.rs  cursor_probe.rs  encoder_texture_probe.rs  himetric_probe.rs  inject_probe.rs  intel_qsv_probe.rs  mf_idr_probe.rs
crates/penflow-core/src/: color.rs  cursor_blit.rs  d3d11.rs  error.rs  lib.rs  monitors.rs  pipeline.rs  sdr_white_level.rs  tonemap_blit.rs
crates/penflow-core/src/capture/: cursor_shape.rs  dxgi.rs  mod.rs
crates/penflow-core/src/encoder/: mf.rs  mod.rs  sps_patcher.rs
crates/penflow-core/src/inject/: binding.rs  coords.rs  mod.rs  vmulti.rs  win_ink.rs  win_touch.rs
crates/penflow-protocol/: Cargo.toml
crates/penflow-protocol/src/: lib.rs
crates/penflow-server/: Cargo.toml
crates/penflow-server/examples/: run_session.rs
crates/penflow-server/src/: lib.rs  session.rs  vdd.rs
crates/penflow-transport/: Cargo.toml
crates/penflow-transport/src/: adb.rs  lib.rs  usb_aoa.rs
docs/: HANDOFF.md  design.md  vdd-stuck.md
installer/: .gitignore  .gitkeep  fetch-vdd.ps1  fetch-vmulti.ps1
tools/: latency-clock.html
tools/vdd/: README.md  vdd_settings.xml
