[package]
name = "penflow-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Penflow capture + encode + WinRT inject engine."

[dependencies]
penflow-protocol = { path = "../penflow-protocol" }
thiserror.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Devices_Display",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_LibraryLoader",
    "Win32_System_Ole",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Media_MediaFoundation",
    "Win32_Media_KernelStreaming",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_Pointer",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Power",
    "UI_Input_Preview_Injection",
] }
windows-core = "0.62"
windows-collections = "0.3"
