[package]
name = "penflow-transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Pluggable transport layer for the Penflow PC↔Android session."

[dependencies]
async-trait.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "io-util"] }
