[package]
name = "penflow-gui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Penflow desktop GUI (Tauri 2.x)."

[[bin]]
name = "penflow-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true

# Engine + session orchestration. The GUI runs the session in-process
# (design.md §11): no IPC, just direct Rust calls from Tauri commands.
penflow-core = { path = "../../../crates/penflow-core" }
penflow-server = { path = "../../../crates/penflow-server" }
penflow-transport = { path = "../../../crates/penflow-transport" }

[target.'cfg(windows)'.dependencies]
# Registry access (autostart) and ShellExecuteW (admin re-launch).
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security",
    "Win32_System_Threading",
] }
